--- a/pages/individual_spaces.html
+++ b/pages/individual_spaces.html
@@ -96,29 +96,124 @@
 
 <!-- Space 2-1 -->
 <div class="space_page">
-  <h2>Space 1-2 - Stage Loft</h2>
+  <h2>Space 2-1</h2>
   <div class="icon_row">
     <div class="price">
       <div class="icon_text_list">
         <div class="item" style="margin-top: -10px">
           <img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b13ab8ac2ff32a467f2489/1722890936149/icon-price.png">
-          <p>$60/hr before 6pm</p>
+          <p>$44/hr before 6pm</p>
         </div>
         <div class="item">
           <img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b13ab8ac2ff32a467f2489/1722890936149/icon-price.png">
-          <p>$65/hr after 6pm</p>
+          <p>$49/hr after 6pm</p>
         </div>
       </div>
     </div>
-    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c494bad0be11b8b0a6e7/1721156756851/icon-people.png" align="middle"><p2>25-30 Guests</p2></div>
-    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697ecf99d9f230bcceefcae/1721232633771/icon-stage.png" align="middle"><p2>Stage with Lights</p2></div>
-    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c4941eacf8454160c4b3/1721156756905/icon-windows.png" align="middle"><p2>Street-View Windows</p2></div>
+    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c494bad0be11b8b0a6e7/1721156756851/icon-people.png" align="middle"><p2>20-25 Guests</p2></div>
+    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c4941eacf8454160c4b3/1721156756905/icon-windows.png" align="middle"><p2>Windows</p2></div>
+    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697efc32f7c257f79771a56/1721233347246/icon-low-volume.png" align="middle"><p2>Additional Sound Dampening</p2></div>
   </div>
-  <p2> Space 1-2 is a versatile 500 sq ft loft that can effortlessly adapt to a variety of events, from board meetings to captivating theatrical performances. The space's low stage provides a focal point for presentations, panel discussions, or even small-scale productions. </p2>
+  <p2> Space 2-1 is a versatile 323 sq ft loft, ideal for a variety of activities, including quiet meetings and recording sessions. The space's oversized windows bathe it in natural light, while our advanced sound-dampening materials ensure optimal acoustics for confidential discussions and recordings. </p2>
   <br style="margin-bottom:10px;">
-  <p2>With comfortable seating and adaptable lighting, Space 1-2 creates a professional and engaging atmosphere that leaves a lasting impression on attendees. Our sound-dampening materials ensure optimal acoustics, perfect for presentations, performances, or confidential discussions.</p2>
+  <p2>With a capacity of up to 25 people, Space 2-1 offers ample room for collaboration and productivity. Whether you're hosting a small team meeting, conducting interviews, or recording a podcast, this adaptable space provides the perfect setting.</p2>
   <br style="margin-bottom:10px;">
-  <p2>Whether you're hosting a corporate event, an academic conference, or a creative showcase, Space 1-2 offers the ideal setting to make your event a memorable success.</p2>
+  <p2>The combination of natural light, superior soundproofing, and a versatile layout makes Space 2-1 an exceptional choice for those seeking a quiet and productive workspace.</p2>
   <hr style="margin-top:20px;margin-bottom:20px;">
   <p2> Cre8ive offers flexible setup options to suit your needs. Our spaces come equipped with essential furniture like tables, chairs, and whiteboards at no extra cost. For added convenience, we offer paid add-ons such as projectors, coffee and tea, and lighting equipment. Whether you require a blank canvas, basic workspace or a fully-equipped office, we have a solution for you. </p2>
 </div>
+
+<iframe src="https://cre8ivenyc.skedda.com/booking?embedded=true&spacefeatureids=c94e60f8fceb40309388c1a399c39c63&viewtype=0" style="width:100%;height:900px;"></iframe> 
+
+
+<!-- Space Type 3 -->
+<div class="space_page">
+  <h2>Space Type 3</h2>
+  <div class="icon_row">
+    <div class="price">
+      <div class="icon_text_list">
+        <div class="item" style="margin-top: -10px">
+          <img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b13ab8ac2ff32a467f2489/1722890936149/icon-price.png">
+          <p>$35/hr before 6pm</p>
+        </div>
+        <div class="item">
+          <img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b13ab8ac2ff32a467f2489/1722890936149/icon-price.png">
+          <p>$40/hr after 6pm</p>
+        </div>
+      </div>
+    </div>
+    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c494bad0be11b8b0a6e7/1721156756851/icon-people.png" align="middle"><p2>15-20 Guests</p2></div>
+    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697e7d85efc44329525adca/1721231320754/icon-wall-mirror.png" align="middle"><p2>Wall Length Mirrors</p2></div>
+  </div>
+  <p2> Space Type 3 is a versatile 323 sq ft loft with high ceilings, offering a spacious and inspiring atmosphere. The mirrored wall adds a touch of elegance and can be used for various purposes, such as dance classes, yoga sessions, or simply creating a more dynamic space. </p2>
+  <br style="margin-bottom:10px;">
+  <p2>The studio's acoustic insulation ensures a quiet and focused environment, making it ideal for meetings, workshops, or creative projects. The adaptable lighting allows you to adjust the ambiance to suit your specific needs, whether you prefer a bright and energetic environment or a more subdued and focused atmosphere. </p2>
+  <br style="margin-bottom:10px;">
+  <p2>With its customizable layout and versatile features, Space Type 3 offers a flexible and productive workspace that can be tailored to your unique requirements. </p2>
+  <hr style="margin-top:20px;margin-bottom:20px;">
+  <p2> Cre8ive offers flexible setup options to suit your needs. Our spaces come equipped with essential furniture like tables, chairs, and whiteboards at no extra cost. For added convenience, we offer paid add-ons such as projectors, coffee and tea, and lighting equipment. Whether you require a blank canvas, basic workspace or a fully-equipped office, we have a solution for you. </p2>
+</div>
+
+<iframe src="https://cre8ivenyc.skedda.com/booking?embedded=true&spacefeatureids=66089&viewtype=0" style="width:100%;height:900px;"></iframe> 
+
+
+<!-- Space 3-4 - Conference Room -->
+<div class="space_page">
+  <h2>Space 3-4 - Conference Room</h2>
+  <div class="icon_row">
+    <div class="price">
+      <div class="icon_text_list">
+        <div class="item" style="margin-top: -10px">
+          <img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b13ab8ac2ff32a467f2489/1722890936149/icon-price.png">
+          <p>$40/hr before 6pm</p>
+        </div>
+        <div class="item">
+          <img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b13ab8ac2ff32a467f2489/1722890936149/icon-price.png">
+          <p>$45/hr after 6pm</p>
+        </div>
+      </div>
+    </div>
+    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c494bad0be11b8b0a6e7/1721156756851/icon-people.png" align="middle"><p2>10-15 Guests</p2></div>
+    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697ecdadeded22f5e89bcfc/1721232602751/icon-presentation.png" align="middle"><p2>Conference Room</p2></div>
+  </div>
+  <p2> Space 3-4 is a dedicated conference room, ideal for meetings, presentations, or team collaborations. The spacious 323 sq ft layout provides ample room for your team to gather and discuss, while the large table offers a convenient workspace for note-taking and collaboration. </p2>
+  <br style="margin-bottom:10px;">
+  <p2>The convenient TV screen is easy to connect to your devices, making it simple to share presentations, videos, or other visual materials with your team. Additionally, the room features a whiteboard for brainstorming and note-taking. </p2>
+  <br style="margin-bottom:10px;">
+  <p2>With its professional and functional design, Space 3-4 is the perfect setting for productive and efficient meetings. </p2>
+  <hr style="margin-top:20px;margin-bottom:20px;">
+  <p2> Cre8ive offers flexible setup options to suit your needs. Our spaces come equipped with essential furniture like tables, chairs, and whiteboards at no extra cost. For added convenience, we offer paid add-ons such as projectors, coffee and tea, and lighting equipment. Whether you require a blank canvas, basic workspace or a fully-equipped office, we have a solution for you. </p2>
+</div>
+
+<iframe src="https://cre8ivenyc.skedda.com/booking?embedded=true&spacefeatureids=81247&viewtype=0" style="width:100%;height:900px;"></iframe> 
+
+
+<!-- Space 4 -->
+<div class="space_page">
+  <h2>Space 4</h2>
+  <div class="icon_row">
+    <div class="price">
+      <div class="icon_text_list">
+        <div class="item" style="margin-top: -10px">
+          <img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b13ab8ac2ff32a467f2489/1722890936149/icon-price.png">
+          <p>$69/hr before 6pm</p>
+        </div>
+        <div class="item">
+          <img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b13ab8ac2ff32a467f2489/1722890936149/icon-price.png">
+          <p>$74/hr after 6pm</p>
+        </div>
+      </div>
+    </div>
+    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c494bad0be11b8b0a6e7/1721156756851/icon-people.png" align="middle"><p2>30-40 Guests</p2></div>
+    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697f3e7af01771ec9f3f0b6/1721234407864/icon-dance.png" align="middle"><p2>Sprung Dance Floor</p2></div>
+  </div>
+  <p2> Space 4 is our largest available space, spanning 600 sq ft, making it ideal for workshops, training sessions, or large meetings. The versatile room features a wall-to-wall mirror with retractable curtains, perfect for group activities or presentations. </p2>
+  <br style="margin-bottom:10px;">
+  <p2>The adaptable lighting allows you to adjust the ambiance to suit your specific needs, whether you prefer a bright and energetic environment or a more subdued and focused atmosphere. The sprung floor provides a comfortable and supportive surface for workshops or group activities. </p2>
+  <br style="margin-bottom:10px;">
+  <p2>With its spacious layout and versatile features, Cre8ive Space 4 is the perfect venue for a variety of events, accommodating up to 40 people comfortably. </p2>
+  <hr style="margin-top:20px;margin-bottom:20px;">
+  <p2> Cre8ive offers flexible setup options to suit your needs. Our spaces come equipped with essential furniture like tables, chairs, and whiteboards at no extra cost. For added convenience, we offer paid add-ons such as projectors, coffee and tea, and lighting equipment. Whether you require a blank canvas, basic workspace or a fully-equipped office, we have a solution for you. </p2>
+</div>
+
+<iframe src="https://cre8ivenyc.skedda.com/booking?embedded=true&spacefeatureids=78995&viewtype=0" style="width:100%;height:900px;"></iframe> 
