--- a/pages/individual_spaces.html
+++ b/pages/individual_spaces.html
@@ -1,21 +1,35 @@
 <!-- Space 1-1 -->
 <div class="space_page">
   <h2>Space 1-1 - Large Windowed Loft</h2>
-  <div class="icon_row">
-    <div class="price">
-      <div class="icon_text_list">
-        <div class="item" style="margin-top: -10px">
-          <img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b13ab8ac2ff32a467f2489/1722890936149/icon-price.png">
-          <p>$60/hr before 6pm</p>
-        </div>
-        <div class="item">
-          <img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b13ab8ac2ff32a467f2489/1722890936149/icon-price.png">
-          <p>$65/hr after 6pm</p>
+</div>
+
+<div class="space_page">
+  <div class="row_wrapper">
+    <div class="icon_row">
+      <div class="price">
+        <div class="icon_text_list">
+          <div class="item" style="margin-top: -10px">
+            <img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b13ab8ac2ff32a467f2489/1722890936149/icon-price.png">
+            <p>$60/hr before 6pm</p>
+          </div>
+          <div class="item">
+            <img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b13ab8ac2ff32a467f2489/1722890936149/icon-price.png">
+            <p>$65/hr after 6pm</p>
+          </div>
         </div>
       </div>
+      <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c494bad0be11b8b0a6e7/1721156756851/icon-people.png" align="middle"><p2>25-30 Guests</p2></div>
+      <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c4941eacf8454160c4b3/1721156756905/icon-windows.png" align="middle"><p2>Full Sunlight and Mirrors</p2></div>
+      <div class="dropdown">
+  				<button onclick="dropdown_function()" class="dropdown_button">Share</button>
+  				<div id="myDropdown" class="dropdown_content">
+  					<a onclick="Copy();"> <div class="image_text"> <i class="fa-regular fa-copy"></i> Copy </div> </a>
+  					<a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.cre8ivenyc.com%2F&amp;src=sdkpreparse"> <div class="image_text"> <i class="fa-brands fa-facebook"></i> Facebook </div> </a>
+  					<a href="https://twitter.com/intent/tweet?hashtags=cre8ivenyc&original_referer=https%3A%2F%2Fpublish.twitter.com%2F&ref_src=twsrc%5Etfw%7Ctwcamp%5Ebuttonembed%7Ctwterm%5Eshare%7Ctwgr%5E&text=Book%20a%20space%20at%20Cre8ive%20NYC!&url=https%3A%2F%2Fwww.cre8ivenyc.com%2F"> <div class="image_text"> <i class="fa-brands fa-twitter"></i> Twitter </div> </a>
+  					<a href="https://www.linkedin.com/shareArticle?mini=true&url=https%3A//www.cre8ivenyc.com/"> <div class="image_text"> <i class="fa-brands fa-linkedin"></i> LinkedIn </div> </a>
+  				</div>
+  			</div>
     </div>
-    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c494bad0be11b8b0a6e7/1721156756851/icon-people.png" align="middle"><p2>25-30 Guests</p2></div>
-    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c4941eacf8454160c4b3/1721156756905/icon-windows.png" align="middle"><p2>Full Sunlight and Mirrors</p2></div>
   </div>
   <p2> Space 1-1 is a versatile space designed to accommodate a wide range of events, from corporate retreats and team-building workshops to product launches. Our spacious 500 sq ft loft offers ample room for your group to spread out and engage in activities, while the high ceilings create a sense of openness and grandeur. </p2> 
   <br style="margin-bottom:10px;">
@@ -32,22 +46,36 @@
 <!-- Space 1-2 -->
 <div class="space_page">
   <h2>Space 1-2 - Stage Loft</h2>
-  <div class="icon_row">
-    <div class="price">
-      <div class="icon_text_list">
-        <div class="item" style="margin-top: -10px">
-          <img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b13ab8ac2ff32a467f2489/1722890936149/icon-price.png">
-          <p>$60/hr before 6pm</p>
-        </div>
-        <div class="item">
-          <img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b13ab8ac2ff32a467f2489/1722890936149/icon-price.png">
-          <p>$65/hr after 6pm</p>
-        </div>
-      </div>
-    </div>
-    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c494bad0be11b8b0a6e7/1721156756851/icon-people.png" align="middle"><p2>25-30 Guests</p2></div>
-    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697ecf99d9f230bcceefcae/1721232633771/icon-stage.png" align="middle"><p2>Stage with Lights</p2></div>
-    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c4941eacf8454160c4b3/1721156756905/icon-windows.png" align="middle"><p2>Street-View Windows</p2></div>
+</div>
+
+<div class="space_page">
+  <div class="row_wrapper">
+		<div class="icon_row">
+			<div class="price">
+				<div class="icon_text_list">
+					<div class="item" style="margin-top: -10px">
+						<img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b13ab8ac2ff32a467f2489/1722890936149/icon-price.png">
+						<p>$60/hr before 6pm</p>
+					</div>
+					<div class="item">
+						<img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b13ab8ac2ff32a467f2489/1722890936149/icon-price.png">
+						<p>$65/hr after 6pm</p>
+					</div>
+				</div>
+			</div>
+			<div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c494bad0be11b8b0a6e7/1721156756851/icon-people.png" align="middle"><p2>25-30 Guests</p2></div>
+			<div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697ecf99d9f230bcceefcae/1721232633771/icon-stage.png" align="middle"><p2>Stage with Lights</p2></div>
+			<div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c4941eacf8454160c4b3/1721156756905/icon-windows.png" align="middle"><p2>Street-View Windows</p2></div>
+			<div class="dropdown">
+				<button onclick="dropdown_function()" class="dropdown_button">Share</button>
+				<div id="myDropdown" class="dropdown_content">
+					<a onclick="Copy();"> <div class="image_text"> <i class="fa-regular fa-copy"></i> Copy </div> </a>
+					<a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.cre8ivenyc.com%2F&amp;src=sdkpreparse"> <div class="image_text"> <i class="fa-brands fa-facebook"></i> Facebook </div> </a>
+					<a href="https://twitter.com/intent/tweet?hashtags=cre8ivenyc&original_referer=https%3A%2F%2Fpublish.twitter.com%2F&ref_src=twsrc%5Etfw%7Ctwcamp%5Ebuttonembed%7Ctwterm%5Eshare%7Ctwgr%5E&text=Book%20a%20space%20at%20Cre8ive%20NYC!&url=https%3A%2F%2Fwww.cre8ivenyc.com%2F"> <div class="image_text"> <i class="fa-brands fa-twitter"></i> Twitter </div> </a>
+					<a href="https://www.linkedin.com/shareArticle?mini=true&url=https%3A//www.cre8ivenyc.com/"> <div class="image_text"> <i class="fa-brands fa-linkedin"></i> LinkedIn </div> </a>
+				</div>
+			</div>
+		</div>
   </div>
   <p2> Space 1-2 is a versatile 500 sq ft loft that can effortlessly adapt to a variety of events, from board meetings to captivating theatrical performances. The space's low stage provides a focal point for presentations, panel discussions, or even small-scale productions. </p2>
   <br style="margin-bottom:10px;">
@@ -57,6 +85,9 @@
   <hr style="margin-top:20px;margin-bottom:20px;">
   <p2> Cre8ive offers flexible setup options to suit your needs. Our spaces come equipped with essential furniture like tables, chairs, and whiteboards at no extra cost. For added convenience, we offer paid add-ons such as projectors, coffee and tea, and lighting equipment. Whether you require a blank canvas, basic workspace or a fully-equipped office, we have a solution for you. </p2>
 </div>
+
+
+
 
 <iframe src="https://cre8ivenyc.skedda.com/booking?embedded=true&spacefeatureids=e49c44ae560c4895801b94e52109b568&viewtype=0" style="width:100%;height:900px;"></iframe> 
 
