--- a/pages/space_page.html
+++ b/pages/space_page.html
@@ -1,16 +1,18 @@
 <!-- Space Page Boxes -->
 
-<!-- Studio 1-1 -->
+<!-- Space 1-1 -->
 <div class="space_desc_box">
   <h3>
-    Studio 1-1 - Windowed Loft
+    Space 1-1 - Windowed Loft
   </h3>
-  <div class="icon_row">
-    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c494bad0be11b8b0a6e7/1721156756851/icon-people.png" align="middle"><p2>25-30 Guests</p2></div>
-    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c4941eacf8454160c4b3/1721156756905/icon-windows.png" align="middle"><p2>Full Sunlight and Mirrors</p2></div>
+  <div class="row_wrapper">
+    <div class="icon_row">
+      <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c494bad0be11b8b0a6e7/1721156756851/icon-people.png" align="middle"><p2>25-30 Guests</p2></div>
+      <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c4941eacf8454160c4b3/1721156756905/icon-windows.png" align="middle"><p2>Full Sunlight and Mirrors</p2></div>
+    </div>
   </div>
   <p2> Cre8ive Space 1-1, an approximately 500 sq foot loft with 12+ foot ceilings and oversized windows that let in lots of natural light. Space 1-1 can host up to 40 people and will be the perfect location for all your off-site activities! </p2> <br>
-  <a href="/studio-1-1">
+  <a href="/Space-1-1">
     <button>More Details &nbsp&nbsp - &nbsp&nbsp Book</button>
   </a>
 </div>
@@ -24,18 +26,20 @@
   <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
 
 
-<!-- Studio 1-2 -->
+<!-- Space 1-2 -->
 <div class="space_desc_box">
   <h3>
-    Studio 1-2 - Stage Loft
+    Space 1-2 - Stage Loft
   </h3>
-  <div class="icon_row">
-    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c494bad0be11b8b0a6e7/1721156756851/icon-people.png" align="middle"><p2>25-30 Guests</p2></div>
-    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697ecf99d9f230bcceefcae/1721232633771/icon-stage.png" align="middle"><p2>Stage with Lights</p2></div>
-    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c4941eacf8454160c4b3/1721156756905/icon-windows.png" align="middle"><p2>Street-View Windows</p2></div>
+  <div class="row_wrapper">
+    <div class="icon_row">
+      <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c494bad0be11b8b0a6e7/1721156756851/icon-people.png" align="middle"><p2>25-30 Guests</p2></div>
+      <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697ecf99d9f230bcceefcae/1721232633771/icon-stage.png" align="middle"><p2>Stage with Lights</p2></div>
+      <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c4941eacf8454160c4b3/1721156756905/icon-windows.png" align="middle"><p2>Street-View Windows</p2></div>
+    </div>
   </div>
-  <p2> Cre8ive Studio 1-2, an approximately 500 sq foot loft, is our theater space! The space boasts a low stage, outward-facing windows, versatile stage lighting and seating that matches the grand atmosphere of the room. </p2> <br>
-  <a href="/studio-1-2">
+  <p2> Cre8ive Space 1-2, an approximately 500 sq foot loft, is our theater space! The space boasts a low stage, outward-facing windows, versatile stage lighting and seating that matches the grand atmosphere of the room. </p2> <br>
+  <a href="/Space-1-2">
     <button>More Details &nbsp&nbsp - &nbsp&nbsp Book</button>
   </a>
 </div>
@@ -51,17 +55,19 @@
 
 
 
-<!-- Studio Type 2 -->
+<!-- Space Type 2 -->
 <div class="space_desc_box">
   <h3>
-    Studio Type 2
+    Space Type 2
   </h3>
-  <div class="icon_row">
-    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c494bad0be11b8b0a6e7/1721156756851/icon-people.png" align="middle"><p2>20-25 Guests</p2></div>
-    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c4941eacf8454160c4b3/1721156756905/icon-windows.png" align="middle"><p2>Mirrors and Windows</p2></div>
+  <div class="row_wrapper">
+    <div class="icon_row">
+      <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c494bad0be11b8b0a6e7/1721156756851/icon-people.png" align="middle"><p2>20-25 Guests</p2></div>
+      <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c4941eacf8454160c4b3/1721156756905/icon-windows.png" align="middle"><p2>Mirrors and Windows</p2></div>
+    </div>
   </div>
   <p2> Cre8ive Space 2-2, a 323 sq foot loft, boasts 12+ foot ceilings, a mirrored wall, and outward-facing, oversized windows for tons of natural light. The space accommodates up to 25 people, and has acoustic installation along with sound dampening, and versatile lighting </p2> <br>
-  <a href="/studio-type-2">
+  <a href="/Space-type-2">
     <button>More Details &nbsp&nbsp - &nbsp&nbsp Book</button>
   </a>
 </div>
@@ -76,18 +82,20 @@
   <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
 
 
-<!-- Studio 2-1 -->
+<!-- Space 2-1 -->
 <div class="space_desc_box">
   <h3>
-    Studio 2-1
+    Space 2-1
   </h3>
-  <div class="icon_row">
-    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c494bad0be11b8b0a6e7/1721156756851/icon-people.png" align="middle"><p2>20-25 Guests</p2></div>
-    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c4941eacf8454160c4b3/1721156756905/icon-windows.png" align="middle"><p2>Windows</p2></div>
-    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697efc32f7c257f79771a56/1721233347246/icon-low-volume.png" align="middle"><p2>Additional Sound Dampening</p2></div>
+  <div class="row_wrapper">
+    <div class="icon_row">
+      <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c494bad0be11b8b0a6e7/1721156756851/icon-people.png" align="middle"><p2>20-25 Guests</p2></div>
+      <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c4941eacf8454160c4b3/1721156756905/icon-windows.png" align="middle"><p2>Windows</p2></div>
+      <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697efc32f7c257f79771a56/1721233347246/icon-low-volume.png" align="middle"><p2>Additional Sound Dampening</p2></div>
+    </div>
   </div>
   <p2> Cre8ive Space 2-1, a 344 sq foot loft, boasts 12+ foot ceilings, a mirrored wall, and outward-facing, oversized windows for tons of natural light. </p2> <br>
-  <a href="/studio-2-1">
+  <a href="/Space-2-1">
     <button>More Details &nbsp&nbsp - &nbsp&nbsp Book</button>
   </a>
 </div>
@@ -102,17 +110,19 @@
   <a class="next" onclick="plusSlides(1, 3)">&#10095;</a>
 
 
-<!-- Studio Type 3 -->
+<!-- Space Type 3 -->
 <div class="space_desc_box">
   <h3>
-    Studio Type 3
+    Space Type 3
   </h3>
-  <div class="icon_row">
-    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c494bad0be11b8b0a6e7/1721156756851/icon-people.png" align="middle"><p2>15-20 Guests</p2></div>
-    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697e7d85efc44329525adca/1721231320754/icon-wall-mirror.png" align="middle"><p2>Wall Length Mirrors</p2></div>
+  <div class="row_wrapper">
+    <div class="icon_row">
+      <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c494bad0be11b8b0a6e7/1721156756851/icon-people.png" align="middle"><p2>15-20 Guests</p2></div>
+      <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697e7d85efc44329525adca/1721231320754/icon-wall-mirror.png" align="middle"><p2>Wall Length Mirrors</p2></div>
+    </div>
   </div>
   <p2> Cre8ive Space 3-1, with 12+ ft ceilings and a 323 sq ft floor plan, is a stunning interior loft that can be modified and customized to fit any activity! The space contains a mirrored wall, acoustic installation, and versatile lighting. </p2> <br>
-  <a href="/studio-type-3">
+  <a href="/Space-type-3">
     <button>More Details &nbsp&nbsp - &nbsp&nbsp Book</button>
   </a>
 </div>
@@ -127,17 +137,19 @@
   <a class="next" onclick="plusSlides(1, 4)">&#10095;</a>
 
 
-<!-- Studio 3-4 -->
+<!-- Space 3-4 -->
 <div class="space_desc_box">
   <h3>
-    Studio 3-4 - Conference Room
+    Space 3-4 - Conference Room
   </h3>
-  <div class="icon_row">
-    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c494bad0be11b8b0a6e7/1721156756851/icon-people.png" align="middle"><p2>10-15 Guests</p2></div>
-    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697ecdadeded22f5e89bcfc/1721232602751/icon-presentation.png" align="middle"><p2>Conference Room</p2></div>
+  <div class="row_wrapper">
+    <div class="icon_row">
+      <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c494bad0be11b8b0a6e7/1721156756851/icon-people.png" align="middle"><p2>10-15 Guests</p2></div>
+      <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697ecdadeded22f5e89bcfc/1721232602751/icon-presentation.png" align="middle"><p2>Conference Room</p2></div>
+    </div>
   </div>
   <p2> Cre8ive Space 3-4, with 12+ ft ceilings and a 323 sq ft floor plan, is a newly remodeled permanent conference table set up, ready to be booked starting at $40 an hour. </p2> <br>
-  <a href="/studio-3-4">
+  <a href="/Space-3-4">
     <button>More Details &nbsp&nbsp - &nbsp&nbsp Book</button>
   </a>
 </div>
@@ -152,17 +164,19 @@
   <a class="next" onclick="plusSlides(1, 5)">&#10095;</a>
 
 
-<!-- Studio 4 -->
+<!-- Space 4 -->
 <div class="space_desc_box">
   <h3>
-    Studio 4
+    Space 4
   </h3>
-  <div class="icon_row">
-    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c494bad0be11b8b0a6e7/1721156756851/icon-people.png" align="middle"><p2>30-40 Guests</p2></div>
-    <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697f3e7af01771ec9f3f0b6/1721234407864/icon-dance.png" align="middle"><p2>Sprung Dance Floor</p2></div>
+  <div class="row_wrapper">
+    <div class="icon_row">
+      <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6696c494bad0be11b8b0a6e7/1721156756851/icon-people.png" align="middle"><p2>30-40 Guests</p2></div>
+      <div class="space_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/6697f3e7af01771ec9f3f0b6/1721234407864/icon-dance.png" align="middle"><p2>Sprung Dance Floor</p2></div>
+    </div>
   </div>
   <p2> At 600 sq ft, Space 4 is our largest available space. Starting at $69 an hour, this 40 -person capacity space contains a wall-to-wall mirror with drawable curtains, versatile lighting, </p2> <br>
-  <a href="/studio-4">
+  <a href="/Space-4">
     <button>More Details &nbsp&nbsp - &nbsp&nbsp Book</button>
   </a>
 </div>
