--- a/blocks/studio_map.html
+++ b/blocks/studio_map.html
@@ -1,28 +1,28 @@
 <div class='map-wrapper'>
   <svg viewBox="0 0 1800 1550" class="map-wrapper map-area">
-    <a xlink:href="/spaces/#Studio_1-1_jump">
+    <a xlink:href="/spaces/#Space_1-1_jump">
       <rect x="230" y="1240" width="510" height="290" /></a>
-    <a xlink:href="/spaces/#Studio_1-2_jump">
+    <a xlink:href="/spaces/#Space_1-2_jump">
       <rect x="225" y="30" width="490" height="290" /></a>
-    <a xlink:href="/spaces/#Studio_2_jump">
+    <a xlink:href="/spaces/#Space_2_jump">
       <rect x="740" y="30" width="330" height="290" /></a>
-    <a xlink:href="/spaces/#Studio_2_jump">
+    <a xlink:href="/spaces/#Space_2_jump">
       <rect x="1090" y="30" width="330" height="290" /></a>
-    <a xlink:href="/spaces/#Studio_2_jump">
+    <a xlink:href="/spaces/#Space_2_jump">
       <rect x="740" y="1240" width="330" height="290" /></a>
-    <a xlink:href="/spaces/#Studio_2_jump">
+    <a xlink:href="/spaces/#Space_2_jump">
       <rect x="1090" y="1240" width="330" height="290" /></a>
-    <a xlink:href="/spaces/#Studio_2-1_jump">
+    <a xlink:href="/spaces/#Space_2-1_jump">
       <rect x="1445" y="1240" width="330" height="290" /></a>
-    <a xlink:href="/spaces/#Studio_4_jump">
+    <a xlink:href="/spaces/#Space_4_jump">
       <rect x="410" y="470" width="310" height="620" /></a>
-    <a xlink:href="/spaces/#Studio_3-4_jump">
+    <a xlink:href="/spaces/#Space_3-4_jump">
       <rect x="740" y="470" width="310" height="300" /></a>
-    <a xlink:href="/spaces/#Studio_3_jump">
+    <a xlink:href="/spaces/#Space_3_jump">
       <rect x="1075" y="470" width="310" height="300" /></a>
-    <a xlink:href="/spaces/#Studio_3_jump">
+    <a xlink:href="/spaces/#Space_3_jump">
       <rect x="740" y="790" width="310" height="300" /></a>
-    <a xlink:href="/spaces/#Studio_3_jump">
+    <a xlink:href="/spaces/#Space_3_jump">
       <rect x="1075" y="790" width="310" height="300" /></a>
   </svg>
   <img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66bb8a82a8c4c057e7a968ce/1723566722968/Skedda+Map.png" />
