--- a/pages/space_page.html
+++ b/pages/space_page.html
@@ -12,7 +12,7 @@
     </div>
   </div>
   <p2> Cre8ive Space 1-1, an approximately 500 sq foot loft with 12+ foot ceilings and oversized windows that let in lots of natural light. Space 1-1 can host up to 40 people and will be the perfect location for all your off-site activities! </p2> <br>
-  <a href="/Space-1-1">
+  <a href="/space-1-1">
     <button>More Details &nbsp&nbsp - &nbsp&nbsp Book</button>
   </a>
 </div>
@@ -39,7 +39,7 @@
     </div>
   </div>
   <p2> Cre8ive Space 1-2, an approximately 500 sq foot loft, is our theater space! The space boasts a low stage, outward-facing windows, versatile stage lighting and seating that matches the grand atmosphere of the room. </p2> <br>
-  <a href="/Space-1-2">
+  <a href="/space-1-2">
     <button>More Details &nbsp&nbsp - &nbsp&nbsp Book</button>
   </a>
 </div>
@@ -67,7 +67,7 @@
     </div>
   </div>
   <p2> Cre8ive Space 2-2, a 323 sq foot loft, boasts 12+ foot ceilings, a mirrored wall, and outward-facing, oversized windows for tons of natural light. The space accommodates up to 25 people, and has acoustic installation along with sound dampening, and versatile lighting </p2> <br>
-  <a href="/Space-type-2">
+  <a href="/space-type-2">
     <button>More Details &nbsp&nbsp - &nbsp&nbsp Book</button>
   </a>
 </div>
@@ -95,7 +95,7 @@
     </div>
   </div>
   <p2> Cre8ive Space 2-1, a 344 sq foot loft, boasts 12+ foot ceilings, a mirrored wall, and outward-facing, oversized windows for tons of natural light. </p2> <br>
-  <a href="/Space-2-1">
+  <a href="/space-2-1">
     <button>More Details &nbsp&nbsp - &nbsp&nbsp Book</button>
   </a>
 </div>
@@ -122,7 +122,7 @@
     </div>
   </div>
   <p2> Cre8ive Space 3-1, with 12+ ft ceilings and a 323 sq ft floor plan, is a stunning interior loft that can be modified and customized to fit any activity! The space contains a mirrored wall, acoustic installation, and versatile lighting. </p2> <br>
-  <a href="/Space-type-3">
+  <a href="/space-type-3">
     <button>More Details &nbsp&nbsp - &nbsp&nbsp Book</button>
   </a>
 </div>
@@ -149,7 +149,7 @@
     </div>
   </div>
   <p2> Cre8ive Space 3-4, with 12+ ft ceilings and a 323 sq ft floor plan, is a newly remodeled permanent conference table set up, ready to be booked starting at $40 an hour. </p2> <br>
-  <a href="/Space-3-4">
+  <a href="/space-3-4">
     <button>More Details &nbsp&nbsp - &nbsp&nbsp Book</button>
   </a>
 </div>
@@ -176,7 +176,7 @@
     </div>
   </div>
   <p2> At 600 sq ft, Space 4 is our largest available space. Starting at $69 an hour, this 40 -person capacity space contains a wall-to-wall mirror with drawable curtains, versatile lighting, </p2> <br>
-  <a href="/Space-4">
+  <a href="/space-4">
     <button>More Details &nbsp&nbsp - &nbsp&nbsp Book</button>
   </a>
 </div>
